--- a/app/Resources/views/Pages/news.html.twig
+++ b/app/Resources/views/Pages/news.html.twig
@@ -23,15 +23,19 @@
 
 <div class="results clear">
     <div class="page-content">
+        
         <p>
-        Главная и единственная на данный момент новость - мы запустили сайт!
+        <small><span class="tag">09.02.2013</span></small>
+            Доработан поиск кроссвордов, добавлены теги, исправлены некоторые ошибки.
         </p>
+        
         <p>
+        <small><span class="tag">01.02.2013</span></small>
+        <b>Мы открылись!</b><br />
         Пока идет тестирование и исправление найденных ошибок, нового фунционала не добавлять не планируется, 
         однако, вы можете повлиять на это! Пишите в твиттер, или оставляйте своеи пожелания на сайте.
         Мы постараемся всё учесть.
         </p>
-        
         <p>
             <a href="https://twitter.com/crosswordeditor" class="twitter-follow-button" data-show-count="false" data-lang="ru">Читать @crosswordeditor</a>
             <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
