--- a/src/Anyx/CrosswordBundle/Resources/views/Lists/tags.html.twig
+++ b/src/Anyx/CrosswordBundle/Resources/views/Lists/tags.html.twig
@@ -6,8 +6,8 @@ $(function(){
     })
 })
 </script>
-<div class="j-tags-cloud">
+<p class="j-tags-cloud">
     {% for tag in tags %}
         <a href="" rel="{{tag.weight}}">{{tag.text}}</a>
     {% endfor %}
-</div>
+</p>
