--- a/src/Anyx/UserBundle/Resources/views/Registration/confirmed.html.twig
+++ b/src/Anyx/UserBundle/Resources/views/Registration/confirmed.html.twig
@@ -1,7 +1,20 @@
 {% extends "FOSUserBundle::layout.html.twig" %}
 
+{% set title = 'Registration' | trans  %}
+
+{% block page_title %}
+    {{ title }}
+{% endblock %}
+
+{% block title %}
+    {{ title }}
+{% endblock %}
+
 {% block fos_user_content %}
     <p>{{ 'registration.confirmed'|trans({'%username%': user.username}, 'FOSUserBundle') }}</p>
+    <p><a href="{{path('create_crossword')}}">{{'Go create' | trans}}</a>
+        {{'your first crossword or' | trans}} <a href="{{path('list_crosswords')}}">{{'go solve' | trans}}</a> {{'community crosswords' | trans}}.
+    </p>
     {% if app.session is not empty %}
         {% set targetUrl = app.session.get('_security.target_path') %}
         {% if targetUrl is not empty %}<p><a href="{{ targetUrl }}">{{ 'registration.back'|trans({}, 'FOSUserBundle') }}</a></p>{% endif %}
