--- a/src/Anyx/CrosswordBundle/Resources/views/Lists/list.html.twig
+++ b/src/Anyx/CrosswordBundle/Resources/views/Lists/list.html.twig
@@ -4,6 +4,7 @@
 	{{ parent() }}
 	{% stylesheets
         '@WhiteOctoberPagerfantaBundle/Resources/public/css/pagerfantaDefault.css'
+        '@AnyxCrosswordBundle/Resources/public/css/jquery.rating.css'
 	%}
 		<link type="text/css" rel="stylesheet" href="{{ asset_url }}" />
 	{% endstylesheets %}
@@ -27,6 +28,13 @@
         
 {% block javascripts %}
 	{{ parent() }}
+
+    {% javascripts
+        '@AnyxCrosswordBundle/Resources/public/js/jquery.rating.pack.js'
+    %}
+    <script type="text/javascript" src="{{ asset_url }}"></script>
+    {% endjavascripts %}
+
     <script type="text/javascript">
         $(function(){
             $('.j-tags-cloud a').click(function() {
