--- a/src/Anyx/UserBundle/Resources/views/Profile/index.html.twig
+++ b/src/Anyx/UserBundle/Resources/views/Profile/index.html.twig
@@ -192,7 +192,7 @@
 			<tr>
 				<td colspan="3">
 					{%trans%}Solutions not found{%endtrans%}
-					<a href="{{ path('new_crosswords')}}">{%trans%}Want now?{%endtrans%}</a>
+					<a href="{{ path('list_crosswords')}}">{%trans%}Want now?{%endtrans%}</a>
 				</td>
 			</tr>
 		<% } %>
