--- a/src/Anyx/CrosswordBundle/Resources/views/Crossword/form.html.twig
+++ b/src/Anyx/CrosswordBundle/Resources/views/Crossword/form.html.twig
@@ -32,7 +32,7 @@
     <div style="clear: both"></div>
         
     {% if form.public is defined %}
-    <div class="margin-bottom">
+    <div class="margin-bottom margin-top">
         {{ form_widget(form.public) }}
         {{ form_label(form.public) }}
     </div>
