--- a/src/Anyx/CrosswordBundle/Resources/views/Crossword/new.html.twig
+++ b/src/Anyx/CrosswordBundle/Resources/views/Crossword/new.html.twig
@@ -11,6 +11,7 @@
 
 	{% javascripts
         '@AnyxCrosswordBundle/Resources/public/js/jquery.min.js'
+        '@AnyxCrosswordBundle/Resources/public/js/jquery-ui.min.js'
         '@AnyxCrosswordBundle/Resources/public/js/jquery.tagsinput.js'
 	%}
 	<script type="text/javascript" src="{{ asset_url }}"></script>
@@ -22,7 +23,8 @@
                 inputClass  : 'input',
                 defaultText : '',
                 width       : null,
-                height      : null
+                height      : null,
+                autocomplete_url:'{{path('tags_autocomplete')}}'
             });
         });
     </script>
@@ -32,6 +34,8 @@
 	{{ parent() }}
 	{% stylesheets
 		'@AnyxCrosswordBundle/Resources/public/css/jquery.tagsinput.css'
+        '@AnyxCrosswordBundle/Resources/public/css/jquery.ui/jquery-ui.css'
+        '@AnyxCrosswordBundle/Resources/public/css/jquery.ui/jquery.ui.autocomplete.css'
 	%}
 	<link type="text/css" rel="stylesheet" href="{{ asset_url }}" />
 	{% endstylesheets %}
