--- a/src/Anyx/CrosswordBundle/Resources/views/Lists/tags.html.twig
+++ b/src/Anyx/CrosswordBundle/Resources/views/Lists/tags.html.twig
@@ -6,7 +6,7 @@ $(function(){
     })
 })
 </script>
-<p class="j-tags-cloud">
+<p class="j-tags-cloud b-tags-cloud">
     {% for tag in tags %}
         <a href="" rel="{{tag.weight}}">{{tag.text}}</a>
     {% endfor %}
