--- a/src/Anyx/CrosswordBundle/Resources/public/css/solver.css
+++ b/src/Anyx/CrosswordBundle/Resources/public/css/solver.css
@@ -63,3 +63,6 @@ TABLE.solver-word-table, .solver-word-table TD {
     line-height: 64px;
     color: #000;
 }
+.solver-word-table input {
+    color: #000;
+}
