--- a/app/Resources/views/Pages/about.html.twig
+++ b/app/Resources/views/Pages/about.html.twig
@@ -25,7 +25,7 @@
     <div class="page-content">
         <p>
         Перед вами бесплатный сервис, позволяющий создавать и решать кроссворды. 
-        Изначально проект задумываылся, как образовательный, а во что он проевратится - посмотрим.
+        Изначально проект задумывался, как образовательный, а во что он превратится - посмотрим.
         </p>
         <p>
         Мы всячески приветствуем общение с пользователями. Ждем ваших замечаний и продлежений.
