--- a/app/Resources/views/Pages/about.html.twig
+++ b/app/Resources/views/Pages/about.html.twig
@@ -30,7 +30,7 @@
         <p>
         Мы всячески приветствуем общение с пользователями. Ждем ваших замечаний и продлежений.
         </p>
-        <p>Команда <a href="{{path('homepage')}}">Редактора кроссвордов</a></p>
+        <p>Команда <a href="{{path('homepage')}}">редактора кроссвордов</a></p>
     </div>
 </div>
 {% endblock %}
